--- a/index.html
+++ b/index.html
@@ -3,154 +3,152 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Solo Wear - Premium T-Shirts in Pakistan. Luxury quality cotton t-shirts with elegant designs. Best premium t-shirts in Lahore, Karachi, Islamabad.">
-    <meta name="keywords" content="premium t-shirts Pakistan, luxury t-shirts, Solo Wear, high quality t-shirts, black gold t-shirts, designer t-shirts Pakistan">
-    <meta name="author" content="Solo Wear">
-    <title>Solo Wear | Premium T-Shirts in Pakistan</title>
+    <title>Solo Wear | Premium Fashion Pakistan</title>
+    <meta name="description" content="Solo Wear - Luxury fashion brand offering premium fabrics, exclusive designs, and fast delivery across Pakistan. Wear the legacy.">
+    <meta name="keywords" content="premium fashion, luxury clothing, pakistani fashion, designer wear, solo wear">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👕</text></svg>">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="main-header">
-        <div class="container">
-            <nav class="main-nav">
-                <a href="index.html" class="logo">
-                    <span class="logo-text">SOLO WEAR</span>
-                    <span class="logo-gold">Premium</span>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="index.html" class="logo">SOLO WEAR</a>
+            <div class="nav-menu">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="shop.html" class="nav-link">Shop</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="cart.html" class="nav-link cart-icon">
+                    <i class="fas fa-shopping-bag"></i>
+                    <span class="cart-count">0</span>
                 </a>
-                <button class="menu-toggle" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <ul class="nav-menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="shop.html">Collection</a></li>
-                    <li><a href="about.html">Our Story</a></li>
-                    <li><a href="cart.html" class="cart-icon">
-                        <i class="fas fa-shopping-bag"></i>
-                        <span class="cart-count">0</span>
-                    </a></li>
-                </ul>
-            </nav>
+                <a href="admin.html" class="nav-link admin-link">
+                    <i class="fas fa-lock"></i>
+                </a>
+            </div>
+            <button class="mobile-menu-btn">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
-    </header>
+    </nav>
 
-    <main>
-        <section class="hero-section">
-            <div class="container">
-                <div class="hero-content">
-                    <h1 class="hero-title">Elevate Your Style with <span class="gold-text">Midnight Gold</span></h1>
-                    <p class="hero-subtitle">Premium T-Shirts Crafted for the Discerning Gentleman</p>
-                    <a href="shop.html" class="btn btn-gold">Explore Collection</a>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-overlay"></div>
+        <video autoplay muted loop class="hero-video">
+            <source src="https://assets.mixkit.co/videos/preview/mixkit-fashion-model-in-a-modern-studio-39876-large.mp4" type="video/mp4">
+        </video>
+        <div class="hero-content">
+            <h1 class="hero-title animate-slide-up">Wear the Legacy</h1>
+            <p class="hero-subtitle animate-slide-up">Premium Fashion Redefined for the Modern Elite</p>
+            <a href="shop.html" class="btn-gold animate-slide-up">Explore Collection</a>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section class="features">
+        <div class="container">
+            <h2 class="section-title">Why Solo Wear</h2>
+            <div class="features-grid">
+                <div class="feature-card animate-fade">
+                    <div class="feature-icon">
+                        <i class="fas fa-gem"></i>
+                    </div>
+                    <h3>Premium Fabric</h3>
+                    <p>Only the finest materials sourced from Italy, Japan, and Switzerland</p>
                 </div>
-                <div class="hero-image">
-                    <div class="floating-element"></div>
+                <div class="feature-card animate-fade">
+                    <div class="feature-icon">
+                        <i class="fas fa-shipping-fast"></i>
+                    </div>
+                    <h3>Fast Delivery</h3>
+                    <p>Express shipping across Pakistan with 24-hour delivery in major cities</p>
+                </div>
+                <div class="feature-card animate-fade">
+                    <div class="feature-icon">
+                        <i class="fas fa-pen-fancy"></i>
+                    </div>
+                    <h3>Exclusive Designs</h3>
+                    <p>Limited edition pieces crafted by our award-winning design team</p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="features-section">
-            <div class="container">
-                <div class="features-grid">
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-tshirt"></i>
-                        </div>
-                        <h3>Premium Cotton</h3>
-                        <p>230 GSM premium combed cotton for unmatched comfort</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-award"></i>
-                        </div>
-                        <h3>Limited Edition</h3>
-                        <p>Exclusive designs with limited production runs</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-truck"></i>
-                        </div>
-                        <h3>Free Shipping</h3>
-                        <p>Free delivery across Pakistan on orders above PKR 5,000</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="new-arrivals" id="new-arrivals">
-            <div class="container">
+    <!-- New Arrivals -->
+    <section class="new-arrivals">
+        <div class="container">
+            <div class="section-header">
                 <h2 class="section-title">New Arrivals</h2>
-                <div class="products-grid" id="new-arrivals-grid">
-                    <!-- Products will be loaded from Firebase -->
-                </div>
-                <div class="text-center">
-                    <a href="shop.html" class="btn btn-outline">View All Collection</a>
-                </div>
+                <a href="shop.html" class="view-all">View All →</a>
             </div>
-        </section>
-
-        <section class="cta-section">
-            <div class="container">
-                <div class="cta-content">
-                    <h2>Join the Premium Revolution</h2>
-                    <p>Be the first to access exclusive drops and member-only offers</p>
-                    <div class="cta-form">
-                        <input type="email" placeholder="Enter your email" class="form-input">
-                        <button class="btn btn-gold">Subscribe</button>
-                    </div>
-                </div>
+            <div class="products-grid" id="newArrivalsGrid">
+                <!-- Products loaded from Firebase -->
+                <div class="loading">Loading exclusive collection...</div>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
 
-    <footer class="main-footer">
+    <!-- Newsletter -->
+    <section class="newsletter">
+        <div class="container">
+            <div class="newsletter-content">
+                <h2>Join the Elite Club</h2>
+                <p>Get exclusive access to pre-launch collections and members-only discounts</p>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Enter your email" required>
+                    <button type="submit" class="btn-gold">Subscribe</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>SOLO WEAR</h3>
-                    <p>Crafting premium apparel for the modern gentleman since 2023.</p>
+                    <p>Redefining luxury fashion in Pakistan since 2010. Experience craftsmanship like never before.</p>
                     <div class="social-links">
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="#" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-tiktok"></i></a>
+                        <a href="#"><i class="fab fa-pinterest"></i></a>
                     </div>
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="shop.html">Collection</a></li>
-                        <li><a href="about.html">Our Story</a></li>
-                        <li><a href="cart.html">Cart</a></li>
-                    </ul>
+                    <a href="index.html">Home</a>
+                    <a href="shop.html">Shop</a>
+                    <a href="about.html">About Us</a>
+                    <a href="cart.html">Cart</a>
                 </div>
                 <div class="footer-col">
-                    <h4>Contact</h4>
-                    <ul>
-                        <li><i class="fas fa-phone"></i> +92 312 1399449</li>
-                        <li><i class="fas fa-envelope"></i> info@solo-wear.pk</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Lahore, Pakistan</li>
-                    </ul>
+                    <h4>Support</h4>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Shipping Policy</a>
+                    <a href="#">Returns & Exchanges</a>
+                    <a href="#">Privacy Policy</a>
+                </div>
+                <div class="footer-col">
+                    <h4>Contact Info</h4>
+                    <p><i class="fas fa-map-marker-alt"></i> The Solo Tower, DHA Phase 6, Karachi</p>
+                    <p><i class="fas fa-phone"></i> +92 21 34567890</p>
+                    <p><i class="fas fa-envelope"></i> info@solo-wear.com</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Solo Wear. All rights reserved.</p>
-                <p>Premium T-Shirts in Pakistan</p>
+                <p>&copy; 2024 Solo Wear. All rights reserved. | <a href="admin.html" class="admin-login">Admin Login</a></p>
             </div>
         </div>
     </footer>
 
-    <!-- WhatsApp Floating Button -->
-    <a href="https://wa.me/923121399449?text=Hi%20Solo%20Wear!%20I'm%20interested%20in%20your%20premium%20t-shirts." 
-       class="whatsapp-float" 
-       target="_blank"
-       aria-label="Chat on WhatsApp">
-        <i class="fab fa-whatsapp"></i>
-    </a>
-
+    <!-- WhatsApp Button will be injected by JavaScript -->
+    
     <script type="module" src="script.js"></script>
 </body>
 </html>
