--- a/about.html
+++ b/about.html
@@ -3,182 +3,166 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Solo Wear brand story - Legacy of premium t-shirts in Pakistan. Discover our journey, craftsmanship, and commitment to quality.">
-    <meta name="keywords" content="Solo Wear story, premium t-shirt brand Pakistan, luxury apparel story, about Solo Wear, brand heritage">
-    <meta name="author" content="Solo Wear">
-    <title>Our Story | Solo Wear - Legacy of Premium T-Shirts</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Our Story | Solo Wear</title>
+    <meta name="description" content="Discover the story behind Solo Wear - Pakistan's premier luxury fashion brand. Our journey, craftsmanship, and commitment to excellence.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👕</text></svg>">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="main-header">
-        <div class="container">
-            <nav class="main-nav">
-                <a href="index.html" class="logo">
-                    <span class="logo-text">SOLO WEAR</span>
-                    <span class="logo-gold">Premium</span>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="index.html" class="logo">SOLO WEAR</a>
+            <div class="nav-menu">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="shop.html" class="nav-link">Shop</a>
+                <a href="about.html" class="nav-link active">About</a>
+                <a href="cart.html" class="nav-link cart-icon">
+                    <i class="fas fa-shopping-bag"></i>
+                    <span class="cart-count">0</span>
                 </a>
-                <button class="menu-toggle" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <ul class="nav-menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="shop.html">Collection</a></li>
-                    <li><a href="about.html" class="active">Our Story</a></li>
-                    <li><a href="cart.html" class="cart-icon">
-                        <i class="fas fa-shopping-bag"></i>
-                        <span class="cart-count">0</span>
-                    </a></li>
-                </ul>
-            </nav>
+                <a href="admin.html" class="nav-link admin-link">
+                    <i class="fas fa-lock"></i>
+                </a>
+            </div>
+            <button class="mobile-menu-btn">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
-    </header>
+    </nav>
 
-    <main class="about-page">
-        <section class="story-hero">
-            <div class="container">
-                <h1 class="page-title">Legacy of <span class="gold-text">Solo Wear</span></h1>
-                <p class="page-subtitle">Where Premium Meets Purpose</p>
-            </div>
-        </section>
+    <!-- About Hero -->
+    <section class="about-hero">
+        <div class="container">
+            <h1 class="page-title">Our Legacy</h1>
+            <p class="page-subtitle">Crafting Excellence Since 2010</p>
+        </div>
+    </section>
 
-        <section class="story-content">
-            <div class="container">
-                <article class="story-section">
-                    <div class="story-text">
-                        <h2 class="story-title"><span class="gold-text">The</span> Beginning</h2>
-                        <p class="story-para">In the heart of Lahore, amidst the rich textile heritage of Pakistan, Solo Wear was born from a simple yet profound vision: to create t-shirts that transcend ordinary apparel and become statements of refined taste.</p>
-                        <p class="story-para">Our founder, a textile connoisseur with decades of experience in luxury fabrics, noticed a gap in the market - premium t-shirts that combined exceptional quality with elegant design at accessible prices.</p>
-                    </div>
-                    <div class="story-image">
-                        <div class="image-placeholder">
-                            <i class="fas fa-history"></i>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="story-section reverse">
-                    <div class="story-text">
-                        <h2 class="story-title"><span class="gold-text">Craftsmanship</span> & Quality</h2>
-                        <p class="story-para">Every Solo Wear t-shirt begins with 230 GSM premium combed cotton, sourced from the finest mills. Our fabric undergoes 14 separate quality checks before it reaches our master craftsmen.</p>
-                        <p class="story-para">The "Midnight Gold" collection represents our commitment to perfection - deep black fabrics that hold their color through 50+ washes, accented with golden thread detailing that catches light with subtle elegance.</p>
-                    </div>
-                    <div class="story-image">
-                        <div class="image-placeholder">
-                            <i class="fas fa-cut"></i>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="story-section">
-                    <div class="story-text">
-                        <h2 class="story-title"><span class="gold-text">Our</span> Philosophy</h2>
-                        <p class="story-para">We believe premium shouldn't mean pretentious. Our designs balance sophistication with wearability, creating pieces that feel as good as they look.</p>
-                        <blockquote class="story-quote">
-                            "A man's wardrobe should whisper quality, not shout brands. That's the Solo Wear difference."
-                            <cite>- Founder, Solo Wear</cite>
-                        </blockquote>
-                    </div>
-                    <div class="story-image">
-                        <div class="image-placeholder">
-                            <i class="fas fa-lightbulb"></i>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="story-section reverse">
-                    <div class="story-text">
-                        <h2 class="story-title"><span class="gold-text">The</span> Future</h2>
-                        <p class="story-para">From our beginnings in Lahore, we're expanding across Pakistan with plans to introduce new collections while maintaining our core commitment to quality.</p>
-                        <p class="story-para">Every purchase supports local craftsmanship and sustainable practices - we're not just making t-shirts, we're cultivating a community of individuals who appreciate the art of dressing well.</p>
-                    </div>
-                    <div class="story-image">
-                        <div class="image-placeholder">
-                            <i class="fas fa-rocket"></i>
-                        </div>
-                    </div>
-                </article>
-            </div>
-        </section>
-
-        <section class="values-section">
-            <div class="container">
-                <h2 class="section-title">Our <span class="gold-text">Core Values</span></h2>
-                <div class="values-grid">
-                    <div class="value-card">
-                        <div class="value-icon">
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <h3>Quality First</h3>
-                        <p>Never compromising on materials or craftsmanship</p>
-                    </div>
-                    <div class="value-card">
-                        <div class="value-icon">
-                            <i class="fas fa-users"></i>
-                        </div>
-                        <h3>Customer Centric</h3>
-                        <p>Building relationships, not just transactions</p>
-                    </div>
-                    <div class="value-card">
-                        <div class="value-icon">
-                            <i class="fas fa-leaf"></i>
-                        </div>
-                        <h3>Sustainable</h3>
-                        <p>Ethical production and minimal waste</p>
-                    </div>
+    <!-- Our Journey -->
+    <section class="about-section">
+        <div class="container">
+            <div class="about-content">
+                <div class="about-text animate-slide-up">
+                    <h2>Our Journey</h2>
+                    <p>Solo Wear began as a vision in 2010 - to redefine luxury fashion in Pakistan. Founded by fashion visionary Ayesha Malik, our brand emerged from a single atelier in Karachi with three passionate tailors and an unwavering commitment to excellence.</p>
+                    <p>Today, we operate state-of-the-art manufacturing facilities across Pakistan, employ over 200 master craftsmen, and have dressed royalty, celebrities, and discerning individuals worldwide. Our journey is marked by milestones of innovation, quality, and an unyielding pursuit of perfection.</p>
+                </div>
+                <div class="about-image animate-fade">
+                    <img src="https://images.unsplash.com/photo-1490481651871-ab68de25d43d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Solo Wear atelier">
                 </div>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
 
-    <footer class="main-footer">
+    <!-- The Fabric -->
+    <section class="about-section dark-section">
+        <div class="container">
+            <div class="about-content reverse">
+                <div class="about-image animate-fade">
+                    <img src="https://images.unsplash.com/photo-1519741497674-611481863552?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Premium fabrics">
+                </div>
+                <div class="about-text animate-slide-up">
+                    <h2>The Fabric</h2>
+                    <p>We believe luxury begins at the fiber. Our sourcing team travels the globe to secure only the finest materials:</p>
+                    <ul>
+                        <li><strong>Italian Silk</strong>: Sourced from Como, known for its unparalleled sheen and texture</li>
+                        <li><strong>Japanese Denim</strong>: From the legendary mills of Okayama, offering exceptional durability</li>
+                        <li><strong>Egyptian Cotton</strong>: The world's longest fibers for supreme softness</li>
+                        <li><strong>Swiss Linen</strong>: Lightweight, breathable, and sustainably harvested</li>
+                    </ul>
+                    <p>Each fabric is carefully inspected and tested for quality, durability, and ethical sourcing before it reaches our production floor.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- The Promise -->
+    <section class="about-section">
+        <div class="container">
+            <div class="about-content">
+                <div class="about-text animate-slide-up">
+                    <h2>The Promise</h2>
+                    <p>At Solo Wear, our promise is simple: uncompromising quality, ethical craftsmanship, and timeless design.</p>
+                    <p>Every garment undergoes 47 quality checks before leaving our facilities. We maintain fair wages and safe working conditions for all our artisans. Our designs are created to transcend seasons, offering timeless elegance that remains relevant for years.</p>
+                    <p>We stand behind every piece with a comprehensive warranty and exceptional customer service. When you wear Solo Wear, you're not just wearing clothing - you're wearing a legacy of excellence.</p>
+                </div>
+                <div class="about-image animate-fade">
+                    <img src="https://images.unsplash.com/photo-1539109136881-3be0616acf4b?ixlib=rb-4.0.3&auto=format&fit=crop&w-800&q=80" alt="Craftsmanship">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Values -->
+    <section class="values">
+        <div class="container">
+            <h2 class="section-title">Our Values</h2>
+            <div class="values-grid">
+                <div class="value-card">
+                    <i class="fas fa-award"></i>
+                    <h3>Excellence</h3>
+                    <p>Never compromising on quality in any aspect of our work</p>
+                </div>
+                <div class="value-card">
+                    <i class="fas fa-leaf"></i>
+                    <h3>Sustainability</h3>
+                    <p>Ethical sourcing and environmentally conscious production</p>
+                </div>
+                <div class="value-card">
+                    <i class="fas fa-hands-helping"></i>
+                    <h3>Craftsmanship</h3>
+                    <p>Preserving traditional techniques with modern innovation</p>
+                </div>
+                <div class="value-card">
+                    <i class="fas fa-user-tie"></i>
+                    <h3>Exclusivity</h3>
+                    <p>Limited production runs ensuring uniqueness</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>SOLO WEAR</h3>
-                    <p>Crafting premium apparel for the modern gentleman since 2023.</p>
+                    <p>Redefining luxury fashion in Pakistan since 2010.</p>
                     <div class="social-links">
-                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                        <a href="#" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-tiktok"></i></a>
+                        <a href="#"><i class="fab fa-pinterest"></i></a>
                     </div>
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="shop.html">Collection</a></li>
-                        <li><a href="about.html">Our Story</a></li>
-                        <li><a href="cart.html">Cart</a></li>
-                    </ul>
+                    <a href="index.html">Home</a>
+                    <a href="shop.html">Shop</a>
+                    <a href="about.html">About Us</a>
+                    <a href="cart.html">Cart</a>
                 </div>
                 <div class="footer-col">
-                    <h4>Contact</h4>
-                    <ul>
-                        <li><i class="fas fa-phone"></i> +92 312 1399449</li>
-                        <li><i class="fas fa-envelope"></i> info@solo-wear.pk</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Lahore, Pakistan</li>
-                    </ul>
+                    <h4>Support</h4>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Shipping Policy</a>
+                    <a href="#">Returns & Exchanges</a>
+                    <a href="#">Privacy Policy</a>
+                </div>
+                <div class="footer-col">
+                    <h4>Contact Info</h4>
+                    <p><i class="fas fa-map-marker-alt"></i> The Solo Tower, DHA Phase 6, Karachi</p>
+                    <p><i class="fas fa-phone"></i> +92 21 34567890</p>
+                    <p><i class="fas fa-envelope"></i> info@solo-wear.com</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Solo Wear. All rights reserved.</p>
-                <p>Premium T-Shirts in Pakistan</p>
+                <p>&copy; 2024 Solo Wear. All rights reserved. | <a href="admin.html" class="admin-login">Admin Login</a></p>
             </div>
         </div>
     </footer>
-
-    <!-- WhatsApp Floating Button -->
-    <a href="https://wa.me/923121399449?text=Hi%20Solo%20Wear!%20I'm%20interested%20in%20your%20premium%20t-shirts." 
-       class="whatsapp-float" 
-       target="_blank"
-       aria-label="Chat on WhatsApp">
-        <i class="fab fa-whatsapp"></i>
-    </a>
 
     <script type="module" src="script.js"></script>
 </body>
